--- a/package.json
+++ b/package.json
@@ -2,13 +2,12 @@
   "name": "proscom_frontend",
   "version": "0.1.0",
   "private": true,
- "scripts": {
-  "dev": "ts-node server.ts",
-  "build": "next build",
-  "start": "NODE_ENV=production ts-node server.ts",
-  "lint": "next lint"
-}
-,
+  "scripts": {
+    "dev": "next dev --turbopack",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
+  },
   "dependencies": {
     "aos": "^2.3.4",
     "framer-motion": "^12.7.4",
